feat: fontawesome, icon component

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="/static/css/fontawesome.css" rel="stylesheet" />
+    <link href="/static/css/solid.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run There</title>
   </head>
