--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="favicon" href="/static/favicon.ico" />
     <link href="/static/css/fontawesome.css" rel="stylesheet" />
     <link href="/static/css/solid.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
