--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="favicon" href="/static/favicon.ico" />
     <link href="/static/css/fontawesome.css" rel="stylesheet" />
     <link href="/static/css/solid.css" rel="stylesheet" />
+    <link href="/static/css/brands.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run There</title>
   </head>
